--- a/app/src/main/res/layout/tv_shows_fragment.xml
+++ b/app/src/main/res/layout/tv_shows_fragment.xml
@@ -1,13 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/swipeRefresh"
+    android:background="@color/dark_grey"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.TvShowsFragment">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/topGuideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.02" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/bottomGuideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.95" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/startGuideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.053" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/endGuideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.947" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/filtersRV"
+            app:layout_constraintTop_toBottomOf="@id/topGuideline"
+            app:layout_constraintStart_toEndOf="@id/startGuideline"
+            app:layout_constraintEnd_toStartOf="@id/endGuideline"
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_filter_layout"
+            tools:itemCount="3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Space
+            android:id="@+id/filtersBottomMargin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/filtersRV"
+            app:layout_constraintDimensionRatio="25"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/showsRV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_show_layout"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/filtersBottomMargin"
+            app:layout_constraintStart_toStartOf="@id/startGuideline"/>
+
+        <Space
+            android:id="@+id/showsBottomMargin"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/showsRV"
+            app:layout_constraintDimensionRatio="15"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
