--- a/app/src/main/res/layout/item_filter_layout.xml
+++ b/app/src/main/res/layout/item_filter_layout.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:id="@+id/rootLayout"
     android:background="@drawable/filter_item_selector_bg">
 
 
