--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,24 @@
 
     <fragment
         android:id="@+id/tvShowsFragment"
-        android:name="com.example.moviesapp.ui.TvShowsFragment"
+        android:name="com.example.moviesapp.ui.tvShows.TvShowsFragment"
         android:label="tv_shows_fragment"
-        tools:layout="@layout/tv_shows_fragment" />
+        tools:layout="@layout/tv_shows_fragment" >
+        <action
+            android:id="@+id/action_tvShowsFragment_to_tvShowDetailsFragment"
+            app:destination="@id/tvShowDetailsFragment"
+            app:popUpTo="@+id/navigation"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/tvShowDetailsFragment"
+        android:name="com.example.moviesapp.ui.tvShowDetails.TvShowDetailsFragment"
+        android:label="TvShowDetailsFragment"
+        tools:layout="@layout/tv_show_details_fragment">
+        <action
+            android:id="@+id/action_tvShowDetailsFragment_to_tvShowsFragment"
+            app:destination="@id/tvShowsFragment"
+            app:popUpTo="@+id/navigation"
+            app:popUpToInclusive="true"/>
+    </fragment>
 </navigation>
