--- a/app/src/main/res/layout/tv_shows_fragment.xml
+++ b/app/src/main/res/layout/tv_shows_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/swipeRefresh"
     android:background="@color/dark_grey"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.TvShowsFragment">
+    tools:context=".ui.tvShows.TvShowsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
