--- a/app/src/main/res/layout/tv_show_details_fragment.xml
+++ b/app/src/main/res/layout/tv_show_details_fragment.xml
@@ -9,15 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/topGuideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.02" />
-
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/bottomGuideline"
@@ -48,7 +40,7 @@
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
             app:layout_constraintDimensionRatio="1.3:1"
-            app:layout_constraintTop_toBottomOf="@id/topGuideline"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/startGuideline"
             app:layout_constraintEnd_toStartOf="@id/endGuideline"/>
 
@@ -165,7 +157,7 @@
             app:layout_constraintDimensionRatio="40"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/filtersRV"
+            android:id="@+id/genresRV"
             app:layout_constraintTop_toBottomOf="@id/ratingBottomMargin"
             app:layout_constraintStart_toEndOf="@id/startGuideline"
             app:layout_constraintEnd_toStartOf="@id/endGuideline"
@@ -179,7 +171,7 @@
             android:id="@+id/genresBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/filtersRV"
+            app:layout_constraintTop_toBottomOf="@id/genresRV"
             app:layout_constraintDimensionRatio="40"/>
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -225,7 +217,8 @@
             tools:listitem="@layout/item_similar_show_layout"
             app:layout_constraintStart_toEndOf="@id/startGuideline"
             app:layout_constraintEnd_toStartOf="@id/endGuideline"
-            app:layout_constraintTop_toBottomOf="@id/similarShowsTitleBottomMargin"/>
+            app:layout_constraintTop_toBottomOf="@id/similarShowsTitleBottomMargin"
+            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
