--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,12 +9,14 @@
         android:id="@+id/tvShowsFragment"
         android:name="com.example.moviesapp.ui.tvShows.TvShowsFragment"
         android:label="tv_shows_fragment"
-        tools:layout="@layout/tv_shows_fragment" >
+        tools:layout="@layout/tv_shows_fragment">
         <action
             android:id="@+id/action_tvShowsFragment_to_tvShowDetailsFragment"
             app:destination="@id/tvShowDetailsFragment"
-            app:popUpTo="@+id/navigation"
-            app:popUpToInclusive="true"/>
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"/>
     </fragment>
     <fragment
         android:id="@+id/tvShowDetailsFragment"
@@ -25,6 +27,15 @@
             android:id="@+id/action_tvShowDetailsFragment_to_tvShowsFragment"
             app:destination="@id/tvShowsFragment"
             app:popUpTo="@+id/navigation"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"/>
+
+        <argument
+            android:name="tvId"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
 </navigation>
