--- a/app/src/main/res/layout/tv_show_details_fragment.xml
+++ b/app/src/main/res/layout/tv_show_details_fragment.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipeRefresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/dark_grey">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,189 +36,258 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivShowPoster"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:scaleType="centerCrop"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher"
             android:adjustViewBounds="true"
-            app:layout_constraintDimensionRatio="1.3:1"
+            app:layout_constraintEnd_toStartOf="@id/endGuideline"
+            app:layout_constraintStart_toEndOf="@id/startGuideline"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/backButton"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/startGuideline"
-            app:layout_constraintEnd_toStartOf="@id/endGuideline"/>
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_baseline_arrow_back"
+            android:background="@android:color/transparent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            app:layout_constraintTop_toBottomOf="@id/ivShowPoster"
-            android:background="@drawable/bg_divider"/>
+            android:background="@drawable/bg_divider"
+            app:layout_constraintTop_toBottomOf="@id/ivShowPoster" />
 
         <Space
             android:id="@+id/dividerBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/divider"
-            app:layout_constraintDimensionRatio="23"/>
+            app:layout_constraintDimensionRatio="23"
+            app:layout_constraintTop_toBottomOf="@id/divider" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/showTitleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="30sp"
             android:text="Deadpool"
-            app:layout_constraintTop_toBottomOf="@id/dividerBottomMargin"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/endGuideline"
             app:layout_constraintStart_toEndOf="@id/startGuideline"
-            app:layout_constraintEnd_toEndOf="@id/endGuideline"/>
+            app:layout_constraintTop_toBottomOf="@id/dividerBottomMargin" />
 
         <Space
             android:id="@+id/titleBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/showTitleTv"
-            app:layout_constraintDimensionRatio="40"/>
+            app:layout_constraintDimensionRatio="40"
+            app:layout_constraintTop_toBottomOf="@id/showTitleTv" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/yearTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/filter_txt_clr"
             android:text="2016"
+            android:textColor="@color/filter_txt_clr"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@id/yearEndMargin"
             app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toBottomOf="@id/titleBottomMargin"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleBottomMargin" />
 
         <Space
             android:id="@+id/yearEndMargin"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toEndOf="@id/yearTv"
             app:layout_constraintEnd_toStartOf="@id/dotDivider"
-            app:layout_constraintWidth_percent="0.02"/>
+            app:layout_constraintStart_toEndOf="@id/yearTv"
+            app:layout_constraintWidth_percent="0.02" />
 
         <View
             android:id="@+id/dotDivider"
             android:layout_width="6dp"
             android:layout_height="6dp"
-            app:layout_constraintStart_toEndOf="@+id/yearEndMargin"
             android:background="@drawable/dot_divider"
-            app:layout_constraintTop_toTopOf="@id/yearTv"
+            app:layout_constraintBottom_toBottomOf="@+id/yearTv"
             app:layout_constraintEnd_toStartOf="@id/dotDividerEndMargin"
-            app:layout_constraintBottom_toBottomOf="@+id/yearTv"/>
+            app:layout_constraintStart_toEndOf="@+id/yearEndMargin"
+            app:layout_constraintTop_toTopOf="@id/yearTv" />
+
         <Space
             android:id="@+id/dotDividerEndMargin"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            app:layout_constraintStart_toEndOf="@id/dotDivider"
             app:layout_constraintEnd_toStartOf="@id/directorTv"
-            app:layout_constraintWidth_percent="0.02"/>
+            app:layout_constraintStart_toEndOf="@id/dotDivider"
+            app:layout_constraintWidth_percent="0.02" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/directorTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/filter_txt_clr"
             android:text="Tom Miller"
+            android:textColor="@color/filter_txt_clr"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/titleBottomMargin"
-            app:layout_constraintStart_toEndOf="@id/dotDividerEndMargin"/>
+            app:layout_constraintStart_toEndOf="@id/dotDividerEndMargin"
+            app:layout_constraintTop_toBottomOf="@id/titleBottomMargin" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ratingStarIV"
-            app:layout_constraintTop_toBottomOf="@id/directorTv"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_star_rate"
             app:layout_constraintEnd_toStartOf="@id/showRatingNumTV"
-            android:src="@drawable/ic_star_rate"/>
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/directorTv" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/showRatingNumTV"
-            app:layout_constraintTop_toTopOf="@id/ratingStarIV"
-            app:layout_constraintBottom_toBottomOf="@id/ratingStarIV"
-            app:layout_constraintStart_toEndOf="@id/ratingStarIV"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:text="8.7"
-            android:textSize="12sp"
             android:textColor="@color/filter_txt_clr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@id/ratingStarIV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ratingStarIV"
+            app:layout_constraintTop_toTopOf="@id/ratingStarIV" />
 
         <Space
             android:id="@+id/ratingBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/ratingStarIV"
-            app:layout_constraintDimensionRatio="40"/>
+            app:layout_constraintDimensionRatio="40"
+            app:layout_constraintTop_toBottomOf="@id/ratingStarIV" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/genresRV"
-            app:layout_constraintTop_toBottomOf="@id/ratingBottomMargin"
-            app:layout_constraintStart_toEndOf="@id/startGuideline"
-            app:layout_constraintEnd_toStartOf="@id/endGuideline"
-            android:orientation="horizontal"
-            tools:listitem="@layout/item_filter_layout"
-            tools:itemCount="3"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toStartOf="@id/endGuideline"
+            app:layout_constraintStart_toEndOf="@id/startGuideline"
+            app:layout_constraintTop_toBottomOf="@id/ratingBottomMargin"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_filter_layout" />
 
         <Space
             android:id="@+id/genresBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/genresRV"
-            app:layout_constraintDimensionRatio="40"/>
+            app:layout_constraintDimensionRatio="40"
+            app:layout_constraintTop_toBottomOf="@id/genresRV" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/showDescriptionTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/genresBottomMargin"
-            app:layout_constraintStart_toEndOf="@id/startGuideline"
-            android:textColor="@color/toned_down_white"
             android:text="Deadpool is a 2016 American superhero film based on the Marvel Comics character of the same name. ... In the film, Wade Wilson hunts the man who gave him mutant abilities and a scarred physical appearance, becoming the antihero Deadpool."
-            app:layout_constraintEnd_toStartOf="@id/endGuideline"/>
+            android:textColor="@color/toned_down_white"
+            app:layout_constraintEnd_toStartOf="@id/endGuideline"
+            app:layout_constraintStart_toEndOf="@id/startGuideline"
+            app:layout_constraintTop_toBottomOf="@id/genresBottomMargin" />
 
         <Space
             android:id="@+id/descriptionBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/showDescriptionTv"
-            app:layout_constraintDimensionRatio="30"/>
+            app:layout_constraintDimensionRatio="30"
+            app:layout_constraintTop_toBottomOf="@id/showDescriptionTv" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/similarShowsTitleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Similar Shows"
-            android:textStyle="bold"
             android:textColor="@color/white"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/startGuideline"
-            app:layout_constraintTop_toBottomOf="@id/descriptionBottomMargin"/>
+            app:layout_constraintTop_toBottomOf="@id/descriptionBottomMargin" />
 
         <Space
             android:id="@+id/similarShowsTitleBottomMargin"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/similarShowsTitleTv"
-            app:layout_constraintDimensionRatio="30"/>
-        
+            app:layout_constraintDimensionRatio="30"
+            app:layout_constraintTop_toBottomOf="@id/similarShowsTitleTv" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/similarShowsRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_similar_show_layout"
-            app:layout_constraintStart_toEndOf="@id/startGuideline"
+            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
             app:layout_constraintEnd_toStartOf="@id/endGuideline"
+            app:layout_constraintStart_toEndOf="@id/startGuideline"
             app:layout_constraintTop_toBottomOf="@id/similarShowsTitleBottomMargin"
-            app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"/>
+            tools:listitem="@layout/item_similar_show_layout" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/wholePageItemsGr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="ivShowPoster, divider, showTitleTv, yearTv, dotDivider,
+            directorTv, ratingStarIV, showRatingNumTV, genresRV, showDescriptionTv,
+            similarShowsTitleTv, similarShowsRV" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/primaryDarkColor"
+            android:indeterminateTintMode="src_atop"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/errorImV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_outline_sentiment_dissatisfied"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/errorText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/problem_icon_text"
+            android:textColor="@color/primaryDarkColor"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/errorImV" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/retryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="@color/primaryDarkColor"
+            android:text="@string/retry_button_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/errorText" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/errorItemsGr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="errorImV, errorText, retryButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
